tests/compError/aliasDoesNotExist.ucl
// compError
// error: alias 'nonExistentAlias' does not exist
// line:5 -> here

nonExistentAlias